--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ nav{
 }
 
 .container .logo{
-    width:10%;
+    width:120px;
     padding-left:10px;
 }
 
@@ -60,4 +60,117 @@ nav a .btn_destaque{
     text-decoration:none;
 }
 
+.sec01{
+    height:640px;
+    color:#FFFFFF;
+    background-image:url(../img/Home.png);
+    background-repeat:no-repeat;
+    background-position:center;
+    background-size:cover;
+}
 
+.sec01 .container .interno p{
+    text-decoration:none;
+    font-size:24px;
+    padding-bottom:50px;
+    color:#FFFFFF;
+    padding-left:20px;
+}
+
+.sec01 .container .interno .titulo{
+    font-size:44px;
+    font-weight:bold;
+    padding-top:100px;
+    padding-bottom:10px;
+    padding-right:50%;
+}
+
+.sec01 .container .interno a{
+    margin-left:20px; 
+}
+
+
+.sec02 .informacao{
+    font-size:18px;
+    color:#474747;
+    text-align:center;
+    padding-top:20px;
+    padding-bottom:10px;
+}
+
+.sec02 p{
+    text-align:center;
+    padding-top:20px;
+    padding-bottom:10px;
+}
+
+.sec03 .informacao{
+    font-size:18px;
+    color:#474747;
+    text-align:center;
+    padding-top:20px;
+    padding-bottom:10px;
+    border-top:1px solid #CCCCCC;
+}
+
+.sec03 p{
+    text-align:center;
+    padding-top:20px;
+    padding-bottom:10px;
+}
+
+.sec04{
+    height:450px;
+    color:#FFFFFF;
+    background-color:#BBBBBB;
+    background-image: url(../img/Home2.png);
+    background-position:right;
+    background-repeat:no-repeat;
+    background-size:650px;
+}
+
+.sec04 .informacao{
+    font-size:44px;
+    font-weight:bold;
+    color:#474747;
+    text-align:left;
+    padding-top:100px;
+    padding-bottom:10px;
+    padding-right:50%;
+    padding-left:40px;
+}
+
+.sec04 .btn{
+    padding-left:40px;
+    padding-top:80px;
+}
+
+.sec04 .btn .btn_destaque{
+    padding-left:40px;
+    padding-right:40px;
+}
+
+footer{
+    margin-top:10px;
+    max-width:960px;
+    width:100%;
+    border-top:1px solid #BBBBBB;
+    font-family:sans-serif;
+}
+
+.rodape{
+    width:300px;
+    height:200px;
+}
+
+.rodape .logo{
+    width:230px;
+    object-position: center;
+    margin-left:35px;
+}
+
+.rodape p{
+    margin-left:40px;
+    font-size:14px;
+    text-align:left;
+}
